bugs on formatting tags within noteButtons
fixed the extra linebreaks on tags within the button of notes

images within notebuttons can be left/right alligned

--- a/assets/main.css
+++ b/assets/main.css
@@ -764,8 +764,8 @@ c {text-align: center;}
 r {text-align: right;}
 l, c, r {display: block;}
 
-r > ascii, r > img {margin-right: 0;}
-l > ascii, l > img {margin-left: 0;}
+r > ascii, r > img, r > a >img {margin-right: 0;}
+l > ascii, l > img, l > a >img {margin-left: 0;}
 
 .faded {opacity: .44; cursor: default}
 .hidden {visibility: hidden;}
